# qskinny-internal-projects

SmartOffice/: .gitignore  CMakeLists.txt  SmartHomeSketch.drawio  cmakethings  convert_sqv_to_qvg.sh  resources.qrc  toolchain-arm.cmake  toolchain-qskinny-arm.cmake
SmartOffice/CMakeStuff/: cmakethings  toolchain-qskinny-arm.cmake
SmartOffice/assets/qvg/: air-conditioner.qvg  app.qvg  capybara.qvg  edag-logo.qvg  electricity.qvg  lamp.qvg  left.qvg  list.qvg  socket.qvg  thermometer-svgrepo-com.qvg  thermometer.qvg  water.qvg  wifi-router.qvg  wifi.qvg  window.qvg
SmartOffice/build-arm/: CMakeCache.txt  Makefile  cmake_install.cmake
SmartOffice/build-arm/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
SmartOffice/build-arm/smartoffice_autogen/: deps  mocs_compilation.cpp
SmartOffice/build-arm/smartoffice_autogen/UVLADIE3JM/: moc_Diagram.cpp  moc_Diagram.cpp.d  moc_DiagramSkinlet.cpp  moc_DiagramSkinlet.cpp.d  moc_DragGraphicLabel.cpp  moc_DragGraphicLabel.cpp.d  moc_DropBox.cpp  moc_DropBox.cpp.d  moc_MySkinFactory.cpp  moc_MySkinFactory.cpp.d  moc_SingletonBannerDb.cpp  moc_SingletonBannerDb.cpp.d  moc_UsageDiagram.cpp  moc_UsageDiagram.cpp.d
SmartOffice/reference/smart-home-management-smartphone-app-template/: 4196433.eps  4196436.ai
SmartOffice/src/: BlindGraphicLabel.cpp  BlindGraphicLabel.h  BottomSection.cpp  BottomSection.h  Diagram.cpp  Diagram.h  DiagramSkinlet.cpp  DragGraphicLabel.cpp  DragGraphicLabel.h  DropBox.cpp  DropBox.h  ImageAndButtonsBoxFactory.h  ImageButtons.cpp  ImageButtons.h  LightButton.cpp  LightButton.h  MainPage.cpp  MainPage.h  MainPageGraphicLabel.cpp  MainPageGraphicLabel.h  MainPagePushButton.cpp  MainPagePushButton.h  MainPageSwitchButton.cpp  MainPageSwitchButton.h  MainPageTextLabel.cpp  MainPageTextLabel.h  MainWindow.h  MasterSwitchButton.cpp  MasterSwitchButton.h  MyGraphicRole.h  MySkinFactory.cpp  MySkinFactory.h  NavigationBox.cpp  NavigationBox.h  NavigationButton.cpp  NavigationButton.h  PageViewer.cpp  PageViewer.h  RoomImageWithButtonsBox.cpp  RoomImageWithButtonsBox.h  (+31 more)
